users: Move from username to id as primary key
Points, watched time, messages, tips are now ID
based, so should not be affected by username
changes

--- a/public/index.html
+++ b/public/index.html
@@ -349,6 +349,7 @@
   <script type="text/javascript" src="./dist/chart.js/js/Chart.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment-with-locales.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.3.1/markdown-it.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@2.4.1/lib/index.min.js"></script>
   <script type="text/javascript" src="/auth/token.js"></script>
   <script type="text/javascript" src="./dist/js/commons/commons.js"></script>
   <script type="text/javascript" src="./dist/js/components/components.js"></script>
